Fixed invisible text on nav buttons

--- a/docs/style.css
+++ b/docs/style.css
@@ -84,10 +84,10 @@ width: 60%;}
 div.button { 
   background-color: white; 
   border: double black;
-  color: transparent;
+  color: black;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: underline;
+  text-decoration: none;
   font-size: 16px;
   font-family: georgia;
   cursor: grab;
